# Project-II

./: .all-contributorsrc  Makefile  Makefile.mak  README.md  inicialitzacio.f90  initialization.f90  integrators.f90  main.f90  parameters.nml  pbc_EIA.f90  potential.f90  readers.f90  readers_mod.f90
Paralel/Working_Area/: Makefile  parameters.txt
Parallel/: Makefile  block_avg.f90  forces.f90  gr.f90  initialization.f90  integrators.f90  main.f90  parallel.ipynb  parameters.nml  pbc.f90  readers.f90  verlet.f90  visualization.gn
Parallel code/: Makefile  forces.f90  initial_positions_module.mod  initialization.f90  integrators.f90  main.f90  parameters.nml  pbc.f90  readers.f90  verlet.f90
Parallel code/ResultsPaula/: forces_and_energies.mod  good_print_results.txt  initial_positions_module.mod  integrators.f90  integrators.mod  main.f90  openmpi.sub  parameters.nml  pbc_mod.mod  readers_mod.mod  verlet.f90  verlet.mod
Parallel code/resultsParallel2904/: forces_and_energies.mod  initial_positions_module.mod  initialization.f90  integrators.f90  integrators.mod  main.f90  pbc_mod.mod  readers_mod.mod  verlet.mod
Serial/: Makefile  block_avg.f90  forces.f90  g_r.ipynb  gr.f90  initialization.f90  integrators.f90  main.f90  parameters.nml  pbc.f90  readers.f90  visualization.gn  visualization.tcl
Serial code/: Makefile  forces.f90  initialization.f90  integrators.f90  main.f90  parameters.nml  pbc_mod.mod  potential.f90  readers.f90  readers_mod.mod  visualization.gn
Serie/Working_Area/: parameters.txt
